Renamed read and write instructions to be load and store.
Change the gjump instruction to use unsigned values.

--- a/README
+++ b/README
@@ -15,8 +15,8 @@ functions:
         zjump
         gjump
         copy
-        read
-        write
+        load
+        store
         stop
 
 Instructions begin with four bits denoting functions followed by arguments.  All
@@ -26,23 +26,22 @@ argument which is 24 bits.
 The following table describes the behavior of all instructions.  The first
 column gives functions and arguments.  The other columns give the corresponding
 storage data and locations.  [r₁], [r₂] and [r₃] denote register naturals.
-S(<natural>) denotes the signed versions of the given naturals.  M(<address>)
-denotes the memory words at the given addresses.  ip denotes the instruction
-pointer:
+M(<address>) denotes the memory words beginning at the given addresses.  ip
+denotes the instruction pointer:
 
-   instruction          storage data                            storage location
+   instruction             storage data                         storage location
 
-    add( r₁, r₂, r₃)     ([r₁] + [r₂]) % 2³²                     r₃
-    sub( r₁, r₂, r₃)     ([r₁] - [r₂]) % 2³²                     r₃
-    mult(r₁, r₂, r₃)     ([r₁] * [r₂]) % 2³²                     r₃
-    div( r₁, r₂, r₃)     ([r₁] / [r₂]) % 2³²                     r₃
-    and( r₁, r₂, r₃)     [r₁] & [r₂]                             r₃
-    or(  r₁, r₂, r₃)     [r₁] | [r₂]                             r₃
-    copy(k, r₁)          k                                       r₁
-    zjump(r₁, r₂)        [r₂] - 4 if [r₁] = 0 else ip            ip
-    gjump(r₁, r₂, r₃)    [r₃] - 4 if S([r₁]) > S([r₂]) else ip   ip
-    read( r₁, r₂)        M([r₁])                                 r₂
-    write(r₁, r₂)        [r₁]                                    M([r₂])
+    add( r₁, r₂, r₃)        ([r₁] + [r₂]) % 2³²                  r₃
+    sub( r₁, r₂, r₃)        ([r₁] - [r₂]) % 2³²                  r₃
+    mult(r₁, r₂, r₃)        ([r₁] * [r₂]) % 2³²                  r₃
+    div( r₁, r₂, r₃)        ([r₁] / [r₂]) % 2³²                  r₃
+    and( r₁, r₂, r₃)        [r₁] & [r₂]                          r₃
+    or(  r₁, r₂, r₃)        [r₁] | [r₂]                          r₃
+    copy(k, r₁)             k                                    r₁
+    zjump(r₁, r₂)           [r₂] - 4 if [r₁] = 0    else ip      ip
+    gjump(r₁, r₂, r₃)       [r₃] - 4 if [r₁] > [r₂] else ip      ip
+    load( r₁, r₂)           M([r₁])                              r₂
+    store(r₁, r₂)           [r₁]                                 M([r₂])
     stop()
 
 Assembly lines specify words unless they are blank, contain only whitespace, or,
